<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
    <EditText
            android:id="@+id/registrationName"
            android:inputType="textPersonName"
            android:hint="@string/name"
            style="@style/textField"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="116dp"/>
    <EditText
            android:id="@+id/registrationSurname"
            android:inputType="textPersonName"
            android:hint="@string/surname"
            style="@style/textField"
            app:layout_constraintTop_toBottomOf="@+id/registrationName"
            app:layout_constraintStart_toStartOf="@+id/registrationName"
            app:layout_constraintEnd_toEndOf="@+id/registrationName"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/registrationEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/textField"
            app:layout_constraintTop_toBottomOf="@+id/registrationSurname"
            app:layout_constraintStart_toStartOf="@+id/registrationSurname"
            app:layout_constraintEnd_toEndOf="@+id/registrationSurname"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/registrationPassword1"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/textField"
            app:layout_constraintTop_toBottomOf="@+id/registrationEmail"
            app:layout_constraintStart_toStartOf="@+id/registrationEmail"
            app:layout_constraintEnd_toEndOf="@+id/registrationEmail"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/registrationPassword2"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            style="@style/textField"
            app:layout_constraintTop_toBottomOf="@+id/registrationPassword1"
            app:layout_constraintStart_toStartOf="@+id/registrationPassword1"
            app:layout_constraintEnd_toEndOf="@+id/registrationPassword1"
            app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/registrationButton"
            android:text="@string/register"
            style="@style/button"
            app:layout_constraintStart_toStartOf="@+id/registrationPassword2"
            app:layout_constraintEnd_toEndOf="@+id/registrationPassword2"
            app:layout_constraintTop_toBottomOf="@+id/registrationPassword2"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/alreadyRegistered"
            android:text="@string/already_registered"
            style="@style/textView"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/registrationButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.363"/>
    <TextView
            android:id="@+id/forgot"
            android:text="@string/forgot_password"
            style="@style/textView"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/alreadyRegistered"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.28"/>
</androidx.constraintlayout.widget.ConstraintLayout>