<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_reservation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        android:background="@color/grey">

    <com.mikepenz.materialize.view.ScrimInsetsRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

            <include
                    android:id="@+id/appBar"
                    layout="@layout/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                    android:id="@+id/editVehiclePlate"
                    android:inputType="text"
                    android:maxLength="7"
                    android:hint="@string/vehicle_plate"
                    style="@style/textField"
                    app:layout_constraintTop_toBottomOf="@+id/appBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="100dp"/>

            <EditText
                    android:id="@+id/editVehicleModel"
                    android:inputType="text"
                    android:maxLength="20"
                    android:hint="@string/vehicle_model"
                    style="@style/textField"
                    app:layout_constraintTop_toBottomOf="@+id/editVehiclePlate"
                    app:layout_constraintStart_toStartOf="@+id/editVehiclePlate"
                    app:layout_constraintEnd_toEndOf="@+id/editVehiclePlate"/>

            <EditText
                    android:id="@+id/editVehicleSeats"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/vehicle_seats"
                    style="@style/textField"
                    app:layout_constraintTop_toBottomOf="@+id/editVehicleModel"
                    app:layout_constraintStart_toStartOf="@+id/editVehicleModel"
                    app:layout_constraintEnd_toEndOf="@+id/editVehicleModel"/>

            <EditText
                    android:id="@+id/editVehicleDate"
                    android:hint="@string/vehicle_date"
                    style="@style/textField"
                    android:focusableInTouchMode="false"
                    app:layout_constraintTop_toBottomOf="@+id/editVehicleSeats"
                    app:layout_constraintStart_toStartOf="@+id/editVehicleSeats"
                    app:layout_constraintEnd_toEndOf="@+id/editVehicleSeats"/>

            <ImageButton
                    android:id="@+id/clearEndDate"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_clear"
                    android:background="@drawable/icon_clear"
                    app:layout_constraintStart_toEndOf="@+id/editVehicleDate"
                    app:layout_constraintTop_toTopOf="@+id/editVehicleDate"
                    app:layout_constraintBottom_toBottomOf="@+id/editVehicleDate"/>

            <TextView
                    android:id="@+id/editVehicleMillis"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/editVehicleDate"
                    app:layout_constraintStart_toStartOf="@+id/editVehicleDate"
                    app:layout_constraintEnd_toEndOf="@+id/editVehicleDate"/>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/editVehicleInstant"
                    android:text="@string/vehicle_instant"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/editVehicleMillis"
                    app:layout_constraintStart_toStartOf="@+id/editVehicleMillis"
                    app:layout_constraintEnd_toEndOf="@+id/editVehicleMillis"/>

            <Button
                    android:id="@+id/editVehicleConfirm"
                    android:text="@string/vehicle_edit"
                    style="@style/button"
                    android:layout_marginTop="84dp"
                    app:layout_constraintTop_toBottomOf="@+id/editVehicleInstant"
                    app:layout_constraintStart_toStartOf="@+id/editVehicleInstant"
                    app:layout_constraintEnd_toEndOf="@+id/editVehicleInstant"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.mikepenz.materialize.view.ScrimInsetsRelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>