<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_reservation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        android:background="@color/grey">

    <com.mikepenz.materialize.view.ScrimInsetsRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

            <include
                    layout="@layout/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/appBar"/>

            <EditText
                    android:id="@+id/reservationDate"
                    android:hint="@string/reservation_date"
                    style="@style/textField"
                    android:focusableInTouchMode="false"
                    app:layout_constraintTop_toBottomOf="@+id/appBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="100dp"/>

            <TextView
                    android:id="@+id/reservationMillis"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/reservationDate"
                    app:layout_constraintStart_toStartOf="@+id/reservationDate"
                    app:layout_constraintEnd_toEndOf="@+id/reservationDate"/>

            <EditText
                    android:id="@+id/reservationZone"
                    android:hint="@string/reservation_zone"
                    style="@style/textField"
                    android:focusableInTouchMode="false"
                    app:layout_constraintTop_toBottomOf="@+id/reservationDate"
                    app:layout_constraintStart_toStartOf="@+id/reservationDate"
                    app:layout_constraintEnd_toEndOf="@+id/reservationDate"/>

            <EditText
                    android:id="@+id/reservationCar"
                    android:hint="@string/reservation_vehicle"
                    style="@style/textField"
                    android:focusableInTouchMode="false"
                    app:layout_constraintTop_toBottomOf="@+id/reservationZone"
                    app:layout_constraintStart_toStartOf="@+id/reservationZone"
                    app:layout_constraintEnd_toEndOf="@+id/reservationZone"/>

            <Button
                    android:id="@+id/reservationConfirm"
                    android:text="@string/reservation_confirm"
                    style="@style/button"
                    android:layout_marginTop="84dp"
                    app:layout_constraintTop_toBottomOf="@+id/reservationCar"
                    app:layout_constraintStart_toStartOf="@+id/reservationCar"
                    app:layout_constraintEnd_toEndOf="@+id/reservationCar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.mikepenz.materialize.view.ScrimInsetsRelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>